--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta name="theme-color" content="#000">
     <link rel="icon" type="image/png" href="">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Catamaran" rel="stylesheet">
     <meta charset="utf-8">
-    <title>Vue 2.0 Boilerplate</title>
+    <title>Paid Family Leave Tool</title>
   </head>
   <body>
     <div id="app"></div>
